src/objects/DeliverableRevision__c.object
<CustomObject>
    <description>Object used to track revisions for a deliverable</description>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deliverable_Revisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deliverable__c</fullName>
        <label>Deliverable</label>
        <referenceTo>Deliverable__c</referenceTo>
        <relationshipName>Deliverable_Revisions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProjId__c</fullName>
        <formula>Deliverable__r.Project__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RevisionDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Revision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RevisionNum__c</fullName>
        <label>Revision #</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Deliverable Version</label>
    <nameField>
        <label>Deliverable Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deliverable Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>